[gd_scene load_steps=5 format=3 uid="uid://dfwntn2ttan1c"]

[ext_resource type="Script" uid="uid://cb7pby2esmh2t" path="res://Events/BeetleShrineRandomEvent.gd" id="1_k0qyp"]
[ext_resource type="Texture2D" uid="uid://c5qt4246rx83y" path="res://Assets/Backgrounds/BEETLESHRINE.png" id="3_7tyhj"]
[ext_resource type="Theme" uid="uid://b66cxik023bhq" path="res://WoodenTheme.tres" id="3_jbtgn"]
[ext_resource type="AudioStream" uid="uid://gucv8pt2vkpe" path="res://Assets/Sounds/random_encounter_bgm.mp3" id="4_ty8pf"]

[node name="BeetleShrineRandomEvent" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("3_jbtgn")
script = ExtResource("1_k0qyp")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("3_7tyhj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="EndDialog" type="AcceptDialog" parent="CanvasLayer"]
unique_name_in_owner = true
initial_position = 1
theme = ExtResource("3_jbtgn")

[node name="GainEnduranceDialog" type="AcceptDialog" parent="CanvasLayer"]
unique_name_in_owner = true
auto_translate_mode = 1
initial_position = 1
theme = ExtResource("3_jbtgn")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = 256.0
offset_right = 77.0
offset_bottom = 392.0
grow_horizontal = 2
grow_vertical = 2

[node name="BeetleList" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("3_jbtgn")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_jbtgn")

[node name="Endure" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "ENDURE"

[node name="Leave" type="Button" parent="CanvasLayer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "LEAVE"

[node name="Shrine" type="StaticBody2D" parent="." groups=["Wall"]]
z_index = -1
z_as_relative = false
position = Vector2(977, 397)
collision_mask = 10

[node name="ShrineCollision" type="CollisionPolygon2D" parent="Shrine"]
polygon = PackedVector2Array(365, -376, -552, -364, -642, 348, 262, 373, 611, 93, 235, 19, 91, 107, -323, 118, -291, -116, 71, -95, 239, 17, 582, 81)

[node name="bgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ty8pf")
autoplay = true

[connection signal="confirmed" from="CanvasLayer/EndDialog" to="." method="_on_end_dialog_confirmed"]
[connection signal="confirmed" from="CanvasLayer/GainEnduranceDialog" to="." method="_on_gain_endurance_dialog_confirmed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/Endure" to="." method="_on_endure_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/VBoxContainer/Leave" to="." method="_on_leave_pressed"]
